# AEC-Project

./: CMakeLists.txt  Compiling Instructions  README.md  main.cpp  meanValueVisualizer.cpp  meanValueVisualizer.h
Mean_Value_Coordinates/Exec/: CMakeLists.txt  main.cpp
Mean_Value_Coordinates/MVI/: meanValueInterpolation.cpp  meanValueInterpolation.h
Mean_Value_Coordinates/MeanValueVisualizer/: CMakeLists.txt  meanValueVisualizer.cpp  meanValueVisualizer.h
Mean_Value_Coordinates/ObjLoader/: objloader.cpp  objloader.h
Mean_Value_Coordinates/PolygonalMesh/: CMakeLists.txt  polygonalmeshio.cpp
Mean_Value_Coordinates/PolygonalMesh/ysclass/: yspositivearea.h
Mean_Value_Coordinates/src/: CMakeLists.txt
Mean_Value_Coordinates/src/fsguilib/src/: fsguibase.cpp  fsguibase.h  fsguicanvas.cpp  fsguidialog.cpp  fsguidialog.h
Mean_Value_Coordinates/src/ysclass/src/: ysadvgeometry.cpp  ysadvgeometry.h  ysdelaunaytri.cpp  ysshelllattice.cpp  ysstring.h
Mean_Value_Coordinates/src/ysgebl/src/gui/: fsgui3dapp_draw.cpp  fsgui3dapp_menusetup.cpp  ysgebl_gui_editor_base.h
Mean_Value_Coordinates/src/ysgebl/src/kernel/: ysshellext.cpp  ysshellext.h
Mean_Value_Coordinates/src/ysglcpp/src/: ysglbuffer_arrowutil.h  ysglparticlemanager.cpp  ysglparticlemanager.h
Mean_Value_Coordinates/src/ysport/src/: ysfileio.cpp  ysfileio.h
Mean_Value_Coordinates/src/ystexturemanager/src/: ystexturemanager.cpp
Mean_Value_Coordinates/utility/: CMakeLists.txt  meshColour.cpp  meshColour.h  meshDeform.cpp
ObjLoader/: CMakeLists.txt  objloader.cpp
(+5 files in other folders)
