
cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(public/src)

add_subdirectory(Mean_Value_Coordinates/PolygonalMesh)
add_subdirectory(Mean_Value_Coordinates/ObjLoader)
add_subdirectory(Mean_Value_Coordinates/Exec)



